// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`object {...} parses calculated prop: {(Symbol(\`foo\`)): 123, ...} 1`] = `
object (1:0-1:33)
  prop (1:1-1:4)
    ident (1:1-1:4) foo
    ident (1:1-1:4) foo
  prop (1:6-1:26)
    group (1:6-1:21)
      call (1:7-1:20)
        ident (1:7-1:13) Symbol
        string \` (1:14-1:19)
          \`bar\`

    block (1:21-1:26)
      number (1:23-1:26) 123
  prop (1:28-1:32)
    ident (1:28-1:32) spam
    ident (1:28-1:32) spam
`;

exports[`object {...} parses default assignment prop: {foo=123} 1`] = `
object (1:0-1:9)
  prop (1:1-1:8)
    ident (1:1-1:4) foo
    assign = (1:1-1:8)
      ident (1:1-1:4) foo
      number (1:5-1:8) 123
`;

exports[`object {...} parses empty: {} 1`] = `
object (1:0-1:2)

`;

exports[`object {...} parses multiple shorthand exprs: {foo, bar} 1`] = `
object (1:0-1:10)
  prop (1:1-1:4)
    ident (1:1-1:4) foo
    ident (1:1-1:4) foo
  prop (1:6-1:9)
    ident (1:6-1:9) bar
    ident (1:6-1:9) bar
`;

exports[`object {...} parses multiple shorthand exprs: {foo, bar} 2`] = `
object (1:0-1:28)
  prop (1:1-1:4)
    ident (1:1-1:4) foo
    ident (1:1-1:4) foo
  prop (1:6-1:14)
    ident (1:6-1:9) bar
    block (1:9-1:14)
      number (1:11-1:14) 123
  prop (1:16-1:27)
    ident (1:16-1:21) shrub
    block (1:21-1:27)
      string ' (1:23-1:27)
        \`ni\`
`;

exports[`object {...} parses single prop with block value: {foo: spam ...} 1`] = `
object (1:0-5:1)
  prop (2:2-4:6)
    ident (2:2-2:5) foo
    block (2:5-4:6)
      ident (3:4-3:8) spam
      ident (4:4-4:6) ni
`;

exports[`object {...} parses single prop: {foo: spam} 1`] = `
object (1:0-1:11)
  prop (1:1-1:10)
    ident (1:1-1:4) foo
    block (1:4-1:10)
      ident (1:6-1:10) spam
`;

exports[`object {...} parses single shorthand prop: {foo} 1`] = `
object (1:0-1:5)
  prop (1:1-1:4)
    ident (1:1-1:4) foo
    ident (1:1-1:4) foo
`;

exports[`object {...} parses single str prop: {\`foo\`: spam} 1`] = `
object (1:0-1:13)
  prop (1:1-1:12)
    string \` (1:1-1:6)
      \`foo\`
    block (1:6-1:12)
      ident (1:8-1:12) spam
`;
